[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/missile.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Missile.gd" type="Script" id=2]
[ext_resource path="res://Assets/RocketLauncherShoot_short.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/RocketLauncherShoot_short0.wav" type="AudioStream" id=4]
[ext_resource path="res://addons/randomAudioStreamPlayer/random_audio_stream_player.gd" type="Script" id=5]
[ext_resource path="res://Assets/RocketExplosion.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/RocketExplosion0.wav" type="AudioStream" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 20.0
height = 40.0

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.0205479, 0.123288, 0.30137, 0.547945, 0.94863 )
colors = PoolColorArray( 0.960938, 0.157654, 0, 1, 0.988235, 0.602206, 0, 1, 1, 0.726563, 0, 1, 0.92549, 0.866667, 0, 0.862745, 1, 1, 1, 0.784314 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 1
emission_sphere_radius = 20.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 60.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 10.0
scale_random = 1.0
color_ramp = SubResource( 3 )

[sub_resource type="Animation" id=5]
resource_name = "Damaged"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Graphic:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Graphic:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Missile" type="Area2D" groups=["Missiles"]]
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )

[node name="Graphic" type="Sprite" parent="."]
scale = Vector2( 2.5, 2.5 )
z_index = 4
texture = ExtResource( 1 )
flip_h = true

[node name="Col" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="ExplosionParticles" type="Particles2D" parent="."]
amount = 200
lifetime = 0.75
explosiveness = 0.8
process_material = SubResource( 4 )

[node name="ExplosionTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="AnimPlayer" type="AnimationPlayer" parent="."]
anims/Damaged = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="LaunchingSFX" type="AudioStreamPlayer" parent="."]
volume_db = -15.0
script = ExtResource( 5 )
samples = [ ExtResource( 3 ), ExtResource( 4 ) ]
random_volume_range = 0.5
random_pitch_range = 0.1

[node name="ExplosionSFX" type="AudioStreamPlayer" parent="."]
volume_db = -5.0
script = ExtResource( 5 )
samples = [ ExtResource( 6 ), ExtResource( 7 ) ]
random_volume_range = 0.5
random_pitch_range = 0.1

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_Missile_body_entered"]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_ExplosionTimer_timeout"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
